# webserver

./: .gitignore  Dockerfile  Makefile  README.md  client  client.cpp  content  first.cgi  hello.py  main.cpp  package-lock.json  package.json  requirements.txt  run_integration_tests.sh
.circleci/: config.yml
1/: CMakeLists.txt  Makefile
HTTPServerRequest/: HTTPRequestHandler.hpp  HTTPRequestMessage.cpp  HTTPRequestMessage.hpp  HTTPRequestMethods.cpp  RequestParser.cpp  RequestParser.hpp  RequestReader.cpp  RequestReader.hpp  main.cpp
HttpRequest/: RequestParser.cpp  RequestReader.cpp  RequestReader.hpp
cgi-bin/: checkbox.cgi  first.cgi  hello_complex.py  hello_get.cgi  mood.py
config/: Makefile  basic-conf  default-conf  default.conf  nginx-conf  same-port  same-port.conf  strange_bug_gone  tester.conf  trial-conf  trial.conf  webserv
config/example_config_files/: default-conf  nginx-conf  nginx-conf-invalid  nginx-conf_location_only
config/src/: AConfigBlock.cpp  AConfigBlock.hpp  (+12 more)
docs/: coding_standards.md  kqueue.md  resources.md
include/: Webserver.hpp
request/: Allowed_Request_Methods.cpp  Allowed_Request_Methods.hpp  HTTPRequest.hpp  ParseRequest.cpp  ParseRequest.hpp  RequestParser.hpp  RequestReader.cpp  RequestReader.hpp
src/: Constants.hpp  Makefile  Webserver.cpp  Webserver.hpp  globals.hpp  main.cpp
tests/: catch_amalgamated.cpp  client  client.cpp  client_with_poor_connection.cpp  hanging_client.cpp  isTestPassed.cpp  main_test.cpp  requestParserMessages.txt  requestParserTests.cpp
www/: index.html  json.json
www2/: index.html
(+211 files in other folders)
